src/test/ui/regions-fn-subtyping-return-static.stderr
error[E0308]: mismatched types
  --> $DIR/regions-fn-subtyping-return-static.rs:51:12
   |
51 |     want_F(bar); //~ ERROR E0308
   |            ^^^ expected concrete lifetime, found bound lifetime parameter 'cx
   |
   = note: expected type `fn(&'cx S) -> &'cx S`
              found type `fn(&'a S) -> &S {bar::<'_>}`

error: aborting due to previous error

